[package]
name = "const-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2-const-stable = "0.1.0"
keccak-const = "0.2.0"

[dev-dependencies]
curve25519-dalek = "4.1.2"
rand = "0.8.5"
criterion = "0.5.1"
bs58 = "0.5.1"
