[package]
name = "const-crypto"
version = "0.1.0"
edition = "2021"
description = "A `#[no_std]` library for `const` sha2/sha3 hashing, ed25519 off-curve point evaluation, and bs58 decoding/encoding with minimal dependencies."
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cavemanloverboy/const-crypto"

[dependencies]
sha2-const-stable = "0.1.0"
keccak-const = "0.2.0"

[dev-dependencies]
curve25519-dalek = "4.1.2"
rand = "0.8.5"
criterion = "0.5.1"
bs58 = "0.5.1"
